--- a/Divinum_Officium/Vesperas/Hymni/Lucis_Creator_Pet/Lucis_Creator_Pet.tex
+++ b/Divinum_Officium/Vesperas/Hymni/Lucis_Creator_Pet/Lucis_Creator_Pet.tex
@@ -2,6 +2,8 @@
 \usepackage[paperheight=9in,paperwidth=6in]{geometry}
 \pagenumbering{gobble}
 \usepackage{fontspec}
+\usepackage[ecclesiasticlatin.usej]{babel}
+     \babelprovide[hyphenrules=latin]{ecclesiasticlatin}
 \usepackage[autocompile]{gregoriotex}
 \def\GreStar{*}
 \def\GreDagger{†}
