--- a/Divinum_Officium/Vesperas/Hymni/Lucis_Creator_2_ad_lib /Lucis_Creator_Optime_2_ad_lib_Mariale.tex
+++ b/Divinum_Officium/Vesperas/Hymni/Lucis_Creator_2_ad_lib /Lucis_Creator_Optime_2_ad_lib_Mariale.tex
@@ -3,7 +3,14 @@
 \usepackage[paperheight=9in,paperwidth=6in]{geometry}
 \pagenumbering{gobble}
 \usepackage{fontspec}
-\usepackage{ebgaramond}
+\usepackage[ecclesiasticlatin.usej]{babel}
+     \babelprovide[hyphenrules=latin]{ecclesiasticlatin}
+\setmainfont{EB Garamond}[UprightFont=EB Garamond Regular,
+ItalicFont= EB Garamond Italic,
+BoldFont= EB Garamond Bold,
+Ligatures=Rare,
+StylisticSet=6,
+Numbers=OldStyle]
 
 \usepackage[autocompile]{gregoriotex}
 
