--- a/Divinum_Officium/Vesperas/Hymni/Lucis_Creator_2_ad_lib /Lucis_Creator_Optime_2_ad_libitum.tex
+++ b/Divinum_Officium/Vesperas/Hymni/Lucis_Creator_2_ad_lib /Lucis_Creator_Optime_2_ad_libitum.tex
@@ -3,6 +3,8 @@
 \usepackage[paperheight=9in,paperwidth=6in]{geometry}
 \pagenumbering{gobble}
 \usepackage{fontspec}
+\usepackage[ecclesiasticlatin.usej]{babel}
+     \babelprovide[hyphenrules=latin]{ecclesiasticlatin}
 \setmainfont{EB Garamond}[UprightFont=EB Garamond Regular,
 ItalicFont= EB Garamond Italic,
 BoldFont= EB Garamond Bold,
@@ -12,8 +14,11 @@ Numbers=OldStyle]
 
 \usepackage[autocompile]{gregoriotex}
 
+\newcommand{\rubrique}[1]{{\fontsize{9}{11}\selectfont\textit{#1}}}
+\newcommand{\normaltext}[1]{{\normalfont\fontsize{9}{11}\selectfont{#1}}}
+
 \begin{document}
-\begin{center}{Hymnus}\end{center}
+\begin{center}{Hymnus.}\end{center}
 \greannotation{8.}
 \grechangestyle{initial}{\fontsize{28}{28}\selectfont}
 \gregorioscore{Lucis_Creator_Optime_2_ad_libitum}
@@ -21,7 +26,9 @@ Numbers=OldStyle]
 \gresetinitiallines{0}
 \gregorioscore{Versus_Dom_Per_Annum}
 \noindent \hspace*{-0,2mm} ℟ . \hspace{0.8mm}Sicut \hspace{2.8mm} incénsum  \hspace{2.8mm}in \hspace{2.2mm}conspéctu  tú-\hspace{0.9mm}o.
-\begin{center}{\textit{Quando fit Commemoratio B.M.V., dicitur doxologia} Jésu, tíbi sit glória, \textit{sed non mutatur tonus hymni.}}\end{center}
+
+\smallskip
+\rubrique{Quando fit Commemoratio B.M.V., dicitur doxologia \normaltext{Jésu, tíbi sit glória,} sed non mutatur tonus hymni.}
 \gregorioscore{Lucis_Creator_Optime_2_ad_lib_Mariale}
 
 \end{document}
