--- a/Divinum_Officium/Vesperas/Hymni/Lucis_Creator_mode_1/Lucis_Creator_Optime_mode_1_BMV.tex
+++ b/Divinum_Officium/Vesperas/Hymni/Lucis_Creator_mode_1/Lucis_Creator_Optime_mode_1_BMV.tex
@@ -3,8 +3,19 @@
 \usepackage[paperheight=9in,paperwidth=6in]{geometry}
 \pagenumbering{gobble}
 \usepackage{fontspec}
-\usepackage{ebgaramond}
+\usepackage[ecclesiasticlatin.usej]{babel}
+     \babelprovide[hyphenrules=latin]{ecclesiasticlatin}
+     
+
 \usepackage[autocompile]{gregoriotex}
+
+\setmainfont{EB Garamond}[UprightFont=EB Garamond Regular,
+ItalicFont= EB Garamond Italic,
+BoldFont= EB Garamond Bold,
+Ligatures=Rare,
+StylisticSet=6,
+Numbers=OldStyle,
+Numbers=Proportional]
 
 \begin{document}
 \gresetinitiallines{0}
