--- a/Divinum_Officium/Vesperas/Hymni/Lucis_Creator_mode_8/Lucis_Creator_Commemoratio_BMV.tex
+++ b/Divinum_Officium/Vesperas/Hymni/Lucis_Creator_mode_8/Lucis_Creator_Commemoratio_BMV.tex
@@ -3,12 +3,23 @@
 \usepackage[paperheight=9in,paperwidth=6in]{geometry}
 \pagenumbering{gobble}
 \usepackage{fontspec}
-\usepackage{ebgaramond}
+\usepackage[ecclesiasticlatin.usej]{babel}
+     \babelprovide[hyphenrules=latin]{ecclesiasticlatin}
+\setmainfont{EB Garamond}[UprightFont=EB Garamond Regular,
+ItalicFont= EB Garamond Italic,
+BoldFont= EB Garamond Bold,
+Ligatures=Rare,
+StylisticSet=6,
+Numbers=OldStyle]
 
 \usepackage[autocompile]{gregoriotex}
 
+\newcommand{\rubrique}[1]{{\fontsize{9}{11}\selectfont\textit{#1}}}
+\newcommand{\normaltext}[1]{{\normalfont\fontsize{9}{11}\selectfont{#1}}}
+
+
 \begin{document}
-\begin{center}{\textit{Quando fit Commemoratio B.M.V., dicitur doxologia} Jésu, tíbi sit glória, \textit{sed non mutatur tonus hymni.}}\end{center}
+\rubrique{Quando fit Commemoratio B.M.V., dicitur doxologia \normaltext{Jésu, tíbi sit glória,} sed non mutatur tonus hymni.}
 \gresetinitiallines{0}
 \gregorioscore{Lucis_Creator_Commemoratio_BMV}
 \vspace{2mm}
