--- a/Divinum_Officium/Hebdomada_Major/textes/Oratio_ad_Horas.tex
+++ b/Divinum_Officium/Hebdomada_Major/textes/Oratio_ad_Horas.tex
@@ -1,4 +1,4 @@
-\rubrique{Quo finito, sine \normaltext{Orémus} dicitur simli voce:}
+\rubrique{Quo finito, sine \normaltext{Orémus} dicitur simili voce:}
 
 \lettrine[findent=-0.3pt]{R}{e}spice, quǽsumus, Dómine, super hanc famíliam tuam, pro qua Dóminus noster Jesus Christus non dubitávit mánibus tradi nocéntium, et crucis subíre torméntum:
 
