--- a/Communio/amen_dico_vobis_quidquid.tex
+++ b/Communio/amen_dico_vobis_quidquid.tex
@@ -20,51 +20,51 @@
 
 \grecommentary{Ps. 129.}
 \gresetinitiallines{0}
-\gabcsnippet{(c4)1.De(g) pro(hg)fún(gj)dis(j) cla(j)má(j)vi(ji) ad(jk) te,(k) <b>Dó</b>(jk)mi(jr)ne:(j.) *(:) Dó(jh)mi(hj)ne,(j) ex(j)áu(j)di(j/ji) vo(gh)cem(ji) <b>me</b>(h hr)am:(g.) (::) <i>Ant.</i>(c+)}
+\gabcsnippet{(c4)1. De(f) pro(gh)fún(h)dis(h) cla(h)má(h)vi(h) <b>ad</b>(hj) te,(h) <b>Dó</b>(h)<b>mi</b>(hg)ne:(gh..) *(:) Dó(gf)mi(gh)ne,(h) ex(h)áu(h)<i>di</i>(hjh) <i>vo</i>(g)<i>cem</i>(f) <i>me</i>(fff)<i>am</i>:(d.) (::) (Z-) <i>Ant.</i>(c+) (::)}
 
 \begin{otherlanguage}{english}
 \noindent \textit{Out of the depths I have cried to thee, O Lord:  2 Lord, hear my voice.}
 \end{otherlanguage}
 
-\gabcsnippet{(c4) 2. Fi(j)ant(j) au(j)res(j) tu(j)æ(ji) in(jk)ten(k)<b>dén</b>(jk jr)tes:(j.) *(:) in(jh) vo(hj)cem(j) de(j)pre(j)ca(j)ti(j/ji)ó(gh)nis(ji) <b>me</b>(h hr)æ.(g.) (::) <i>Ant.</i>(c+)}
+\gabcsnippet{(c4) 2. Fi(f)ant(gh) au(h)res(h) tu(h)æ(h) <b>in</b>(hj)ten(h)<b>dén</b>(hg)tes:(gh..) *(:) in(gf) vo(gh)cem(h) de(h)pre(h)ca(h)<i>ti</i>(hjh)<i>ó</i>(g)<i>nis</i>(f) <i>me</i>(fff)<i>æ</i>.(d.) (::) <i>Ant.</i>(c+) (::)}
 
 \begin{otherlanguage}{english}
 \noindent \textit{Let thy ears be attentive to the voice of my supplication.}
 \end{otherlanguage}
 
-\gabcsnippet{(c4) 3. Si(j) in(j)i(j)qui(j)tá(j)tes(j) ob(j)ser(j)vá(ji)ve(jk)ris,(k) <b>Dó</b>(jk)mi(jr)ne:(j.) *(:) Dó(jh)mi(hj)ne,(j) quis(j/ji) sus(gh)ti(ji)<b>né</b>(h hr)bit?(g.) (::) <i>Ant.</i>(c+)}
+\gabcsnippet{(c4) 3. Si(f) in(gh)i(h)qui(h)tá(h)tes(h) ob(h)ser(h)<b>vá</b>(hj)ve(h)ris,(h) <b>Dó</b>(h)<b>mi</b>(hg)ne:(gh..) *(:) Dó(gf)mi(gh)ne,(h) <i>quis</i>(hjh) <i>sus</i>(g)<i>ti</i>(f)<i>né</i>(fff)<i>bit</i>?(d.) (::) <i>Ant.</i>(c+) (::)}
 
 \begin{otherlanguage}{english}
 \noindent \textit{If thou, O Lord, wilt mark iniquities: Lord, who shall stand it.}
 \end{otherlanguage}
 
-\gabcsnippet{(c4) 4.  Qui(j)a(j) a(j)pud(j) te(j) pro(j)pi(j)ti(ji)á(jk)ti(k)<b>o</b>(jk jr) est:(j.) *(:) et(jh) pro(hj)pter(j) le(j)gem(j) tu(j)am(j) sus(j)tí(j)nu(j/ji)i(gh) te,(ji) <b>Dó</b>(h)mi(hr)ne.(g.) (::) <i>Ant.</i>(c+)}
+\gabcsnippet{(c4) 4.  Qui(f)a(gh) a(h)pud(h) te(h) pro(h)pi(h)ti(h)<b>á</b>(hj)ti(h)<b>o</b>(hg) est:(gh..) *(:) et(gf) prop(gh)ter(h) le(h)gem(h) tu(h)am(h) sus(h)tí(h)nu(h)<i>i</i>(hjh) <i>te</i>,(g) <i>Dó</i>(f)<i>mi</i>(fff)<i>ne</i>.(d.) (::) <i>Ant.</i>(c+) (::)}
 
 \begin{otherlanguage}{english}
 \noindent \textit{For with thee there is merciful forgiveness: and by reason of thy law, I have waited for thee, O Lord.}\end{otherlanguage}
 
-\gabcsnippet{(c4) 5. Sus(j)tí(j)nu(j)it(j) á(j)ni(j)ma(j) me(j)a(j) in(ji) ver(jk)bo(k) <b>e</b>(jk jr)jus:(j.) *(:) spe(jh)rá(hj)vit(j) á(j)ni(j)ma(j) me(j/ji)a(gh) in(ji) <b>Dó</b>(h)mi(hr)no.(g.) (::) <i>Ant.</i>(c+)}
+\gabcsnippet{(c4) 5.  Sus(f)tí(gh)nu(h)it(h) á(h)ni(h)ma(h) me(h)a(h) in(h) <b>ver</b>(hj)bo(h) <b>e</b>(hg)jus:(gh..) *(:) spe(gf)rá(gh)vit(h) á(h)ni(h)ma(h) me(h)<i>a</i>(hjh) <i>in</i>(g) <i>Dó</i>(f)<i>mi</i>(fff)<i>no</i>.(d.) (::) <i>Ant.</i>(c+) (::)}
 
 \begin{otherlanguage}{english}
 \noindent \textit{My soul hath relied on his word:  5 My soul hath hoped in the Lord.}
 \end{otherlanguage}
 
-\gabcsnippet{(c4) 6.  A(j) cu(j)stó(j)di(j)a(j) ma(j)tu(j)tí(j)na(j) us(ji)que(jk) ad(k) <b>no</b>(jk jr)ctem:(j.) *(:) spe(jh)ret(hj) Is(j)ra(j/ji)ël(gh) in(ji) <b>Dó</b>(h)mi(hr)no.(g.) (::) <i>Ant.</i>(c+)}
+\gabcsnippet{(c4) 6. A(f) cu(gh)stó(h)di(h)a(h) ma(h)tu(h)tí(h)na(h) <b>us</b>(hj)que(h) ad(h) <b>no</b>(hg)ctem:(gh..) *(:) spe(gf)ret(gh) Is(h)ra(h)<i>el</i>(hjh) <i>in</i>(g) <i>Dó</i>(f)<i>mi</i>(fff)<i>no</i>.(d.) (::) <i>Ant.</i>(c+) (::)}
 
 \begin{otherlanguage}{english}
-\noindent \textit{From the morning watch even until night, let Israel hope in the Lord.}
+\noindent \textit{From the morning watch even until night, let Isræl hope in the Lord.}
 \end{otherlanguage}
 
-\gabcsnippet{(c4) 7. Qui(j)a(j) a(j)pud(j) Dó(j)mi(j)num(j) mi(ji)se(jk)ri(k)<b>cór</b>(jk)di(jr)a:(j.) *(:) et(jh) co(hj)pi(j)ó(j)sa(j) a(j)pud(j) e(j/ji)um(gh) red(ji)<b>ém</b>(h)pti(hr)o.(g.) (::)<i>Ant.</i>(c+)}
+\gabcsnippet{(c4) 7. Qui(f)a(gh) a(h)pud(h) Dó(h)mi(h)num(h) mi(h)<b>se</b>(hj)ri(h)<b>cór</b>(h)<b>di</b>(hg)a:(gh..) *(:) et(gf) co(gh)pi(h)ó(h)sa(h) a(h)pud(h) e(h)<i>um</i>(hjh) <i>red</i>(g)<i>ém</i>(f)<i>pti</i>(fff)<i>o</i>.(d.) (::) <i>Ant.</i>(c+) (::)}
 
 \begin{otherlanguage}{english}
 \noindent \textit{Because with the Lord there is mercy: and with him plentiful redemption.}
 \end{otherlanguage}
 
-\gabcsnippet{(c4) 8. Et(j) i(j)pse(j) réd(ji)i(jk)met(k) <b>Is</b>(jk)ra(jr)el:(j.) *(:) ex(jh) ó(hj)mni(j)bus(j) in(j)i(j)qui(j)tá(j/ji)ti(gh)bus(ji) <b>e</b>(h hr)jus.(g.) (::) <i>Ant.</i>(c+)}
+\gabcsnippet{(c4) 8. Et(f) i(gh)pse(h) <b>réd</b>(hj)i(h)met(h) <b>Is</b>(h)<b>ra</b>(hg)el:(gh..) *(:) ex(gf) óm(gh)ni(h)bus(h) in(h)i(h)qui(h)<i>tá</i>(hjh)<i>ti</i>(g)<i>bus</i>(f) <i>e</i>(fff)<i>jus</i>.(d.) (::) <i>Ant.</i>(c+) (::)}
 
 \begin{otherlanguage}{english}
-\noindent \textit{And he shall redeem Israel from all his iniquities.}
+\noindent \textit{And he shall redeem Isræl from all his iniquities.}
 \end{otherlanguage}
  
 \end{document}
