--- a/ad_Benedictionem/textes/Second_Sunday_Prayer.tex
+++ b/ad_Benedictionem/textes/Second_Sunday_Prayer.tex
@@ -3,7 +3,7 @@
 
 \rubrique{The priest says:}
 
-O merciful God, let the glorious intercession of Thy saints assist us; above all, the most blessèd Virgin Mary, the Immaculate Mother of Thine only-begotten Son, and Thy holy apostles, Peter and Paul, through whose patronage we humbly commend this land. Be mindful of our fathers, Thy glorious bishop John Neumann; of Junípero and Damian, Thy priests. Remember our holy martyrs who shed their blood for Christ: Isaac, René and Jean. Remember those holy virgins and widows: Frances, Rose-Philippine, Katherine, Théodore, Marianne, Kateri, and Elizabeth Ann; and all those holy men and women who made this country illustrious by their glorious merits and virtues. Let not thy memory perish before Thee, O Lord, but let their supplication enter daily into Thy sight; and do Thou, who didst so often spare Thy sinful people for the sake of Abraham, Isaac, and Jacob, now, also moved by the prayers of our fathers, brothers, and sisters reigning with Thee, have mercy up on us, save Thy people and bless Thine inheritance; and suffer not those souls to perish which Thy Son hath redeemed with His own most Precious Blood: Who liveth and reignest with Thee, world without end. ℟. Amen.
+O merciful God, let the glorious intercession of Thy saints assist us; above all, the most blessèd Virgin Mary, the Immaculate Mother of Thine only-begotten Son, and Thy holy apostles, Peter and Paul, through whose patronage we humbly commend this our land. Be mindful of our fathers, Thy glorious bishop John Neumann; of Junípero and Damian, Thy priests. Remember our holy martyrs who shed their blood for Christ: Isaac, René and Jean. Remember those holy virgins and widows: Frances, Rose-Philippine, Katherine, Théodore, Marianne, Kateri, and Elizabeth Ann; and all those holy men and women who made this country illustrious by their glorious merits and virtues. Let not thy memory perish before Thee, O Lord, but let their supplication enter daily into Thy sight; and do Thou, who didst so often spare Thy sinful people for the sake of Abraham, Isaac, and Jacob, now, also moved by the prayers of our fathers, brothers, and sisters reigning with Thee, have mercy up on us, save Thy people and bless Thine inheritance; and suffer not those souls to perish which Thy Son hath redeemed with His own most Precious Blood: Who liveth and reignest with Thee, world without end. ℟. Amen.
 \smallskip
 
 Let us pray.
