--- a/ad_Benedictionem/Benediction_Sundays_tp.tex
+++ b/ad_Benedictionem/Benediction_Sundays_tp.tex
@@ -83,7 +83,7 @@ Amen.
    \begin{paracol}{2}
    
 \noindent \vv Panem de cælo præstitisti eis, allelúia.
-\noindent \rr Omne delectamentum in se habentem, allelúia.
+\noindent \rr Omne dele\-ctaméntum in se habéntem, allelúia.
   
   Orémus.
   
