--- a/ad_Benedictionem/Benediction_feasts_letter.tex
+++ b/ad_Benedictionem/Benediction_feasts_letter.tex
@@ -58,9 +58,9 @@ Amen.
 
    \begin{paracol}{2}
 
-\noindent ℣. Panem de cælo præstitisti eis. \tpalleluia{}\footnote{Atque per octavam Corporis Christi. \textit{As well as throughout the octave of Corpus Christi.}}
+\noindent \vv Panem de cælo præstitisti eis. \tpalleluia{}\footnote{Atque per octavam Corporis Christi. \textit{As well as throughout the octave of Corpus Christi.}}
 
-\noindent ℟. Omne delectamentum in se habentem. \tpalleluia{}
+\noindent \rr Omne dele\-ctaméntum in se habéntem. \tpalleluia{}
 
   Orémus.
   
