--- a/ad_Benedictionem/Benediction_sundays_June.tex
+++ b/ad_Benedictionem/Benediction_sundays_June.tex
@@ -109,7 +109,7 @@ Amen.
 
 \noindent \vv Panem de cælo præstitisti eis. \tpalleluia{}\footnote{Atque per octavam Corporis Christi. \textit{As well as throughout the octave of Corpus Christi.}}
 
-\noindent \rr Omne delectamentum in se habentem. \tpalleluia{}
+\noindent \rr Omne dele\-ctaméntum in se habéntem. \tpalleluia{}
 
   Orémus.
   
