--- a/ad_Benedictionem/Benediction_thursdays_pa.tex
+++ b/ad_Benedictionem/Benediction_thursdays_pa.tex
@@ -40,23 +40,23 @@ Amen.
 
 \lettrine{O}{} most sweet Jesus, who didst come into this world to enrich all souls with the life of Thy grace, and in order to preserve and foster that life within them, dost give Thyself day by day in the most adorable Sacrament of the Eucharist, as a saving remedy to heal their infirmities and a divine food to support their weakness: we humbly beseech Thee graciously to pour forth Thy Holy Spirit upon them all; so that, filled therewith, such as are defiled with deadly stain may return to Thee and recover the life of grace which they have forfeited by sin, and such as by the gift of Thy mercy already cleave to Thee may, as to each is given, approach every day Thy heavenly Banquet with true devotion. Strengthened thus, may they find herein an antidote to daily venial faults and a nourishing of the life of grace; that so being ever more and more cleansed, they may come to enjoy everlasting happiness in Heaven. ℟. Amen.
 
-\rubrique{Then follows the prayer for the Sovereign Pontiff:}\footnote{\raggedright{Partialis indulgentia conceditur christifideli qui,…spiritu filialis devotionis, pro Summo Pontific aliquam prece legitime adprobatam pi recitaverit \textit{(e.g. Oremus pro Pontifice)} (Enchiridion Indulgentiarum, nº 25, 1º)}}
+\rubrique{Then follows the prayer for the Sovereign Pontiff:}\footnote{\raggedright{Partialis indulgentia conceditur christifideli qui,…spiritu filialis devotionis, pro Summo Pontific aliquam prece legitime adprobatam pi recitaverit \textit{(e.g. Orémus pro Pontifice)} (Enchiridion Indulgentiarum, nº 25, 1º)}}
 
-\noindent ℣. Let us pray for our Pontiff, \textit{N.}
+\noindent \vv Let us pray for our Pontiff, \textit{N.}
 
-\noindent ℟. The Lord preserve him, and give him life, | and make him blessèd upon the earth, | and deliver him up not up to the will of his enemies.
+\noindent \rr The Lord preserve him, and give him life, | and make him blessèd upon the earth, | and deliver him up not up to the will of his enemies.
 
-\noindent ℣. Our Father…
+\noindent \vv Our Father…
 
-\noindent ℟. Give us this day…
+\noindent \rr Give us this day…
 
-\noindent ℣. Hail Mary…
+\noindent \vv Hail Mary…
 
-\noindent ℟. Holy Mary…
+\noindent \rr Holy Mary…
 
-\noindent ℣.  Glory be…
+\noindent \vv  Glory be…
 
-\noindent ℟. As it was…world without end. Amen.
+\noindent \rr As it was…world without end. Amen.
 
 \rubrique{Priest:}
 
@@ -92,9 +92,9 @@ Amen.
 
    \begin{paracol}{2}
 
-\noindent ℣. Panem de cælo præstitisti eis. \tpalleluia{}\footnote{Atque per octavam Corporis Christi. \textit{As well as throughout the octave of Corpus Christi.}}
+\noindent \vv Panem de cælo præstitisti eis. \tpalleluia{}\footnote{Atque per octavam Corporis Christi. \textit{As well as throughout the octave of Corpus Christi.}}
 
-\noindent ℟. Omne delectamentum in se habentem. \tpalleluia{}
+\noindent \rr Omne dele\-ctaméntum in se habéntem. \tpalleluia{}
 
 Orémus.
   
