--- a/ad_Benedictionem/textes/Alma_Redemptoris_en.tex
+++ b/ad_Benedictionem/textes/Alma_Redemptoris_en.tex
@@ -11,17 +11,17 @@ have mercy on sinners.
 
 \rubrique{From the first Sunday of Advent until Christmas Eve.}
 
-\noindent ℣. The Angel of the Lord declared unto Mary.
+\noindent \vv The Angel of the Lord declared unto Mary.
 
-\noindent ℟. And she conceived by the Holy Ghost.
+\noindent \rr And she conceived by the Holy Ghost.
 
 \noindent Let us pray. Pour forth we beseech Thee, O Lord, Thy grace into our hearts, that we to whom the Incarnation of Christ, Thy Son, was made known by the message of an Angel, may, by His Passion and Cross, be brought to the glory of His Resurrection. Through the same Christ our Lord. ℟. Amen.
 
 \rubrique{From First Vespers of Christmas until the Purification.}
 
-\noindent ℣. After childbirth, O Virgin, thou didst remain inviolate.
+\noindent \vv After childbirth, O Virgin, thou didst remain inviolate.
 
-\noindent ℟. Intercede for us, O Mother of God.
+\noindent \rr Intercede for us, O Mother of God.
 
 \noindent Let us pray. O God, Who by the fruitful virginity of blessed Mary, hast given to the human race the rewards of eternal salvation: grant, we beseech Thee, that we may experience her intercession for us, through whom we deserved to receive the Author of life, our Lord Jesus Christ, thy Son. ℟. Amen.
 \end{otherlanguage}
