--- a/ad_Benedictionem/textes/Oratio_Adventu.tex
+++ b/ad_Benedictionem/textes/Oratio_Adventu.tex
@@ -1,19 +1,19 @@
 \rubrique{Ab Adventu usque ad Nativitaem Domini:}
 
-\noindent ℣. Angelus Dómini nuntiávit Maríæ.
+\noindent \vv Angelus Dómini nuntiávit Maríæ.
 
-\noindent ℟. Et concépit de Spíritu Sancto.
+\noindent \rr Et concépit de Spíritu Sancto.
 
 
 %\begin{multicols}{2}
-%Oremus.
+%Orémus.
 %
 %Deus, qui de beátæ Maríæ Vírginis útero Verbum tuum, Angelo nuntiánte, carnem suscípere voluísti:~† præsta supplícibus tuis; ut, qui vere eam Genetrícem Dei credimus,~* ejus apud te intercessiónibus adjuvémur. Per eumdem Christum Dóminum nostrum.
 %
 %℟. Amen.
 %\end{multicols}
 
-Oremus.
+Orémus.
 
 \noindent Deus, qui de beátæ Maríæ Vírginis útero Verbum tuum, Angelo nuntiánte, carnem suscípere voluísti:~† præsta supplícibus tuis; ut, qui vere eam Genetrícem Dei credimus,~* ejus apud te intercessiónibus adjuvémur. Per eumdem Christum Dóminum nostrum.
 
