--- a/ad_Benedictionem/textes/Oratio_TP_la.tex
+++ b/ad_Benedictionem/textes/Oratio_TP_la.tex
@@ -1,8 +1,8 @@
 \rubrique{Temporae Paschali:}
 
-\noindent ℣. Gaude et lætáre, Virgo María, allelúia.
+\noindent \vv Gaude et lætáre, Virgo María, allelúia.
 
-\noindent ℟. Quia surréxit Dóminus vere, allelúia.
+\noindent \rr Quia surréxit Dóminus vere, allelúia.
 
 Orémus.
 
