--- a/ad_Benedictionem/textes/Pro_Papa_english.tex
+++ b/ad_Benedictionem/textes/Pro_Papa_english.tex
@@ -1,17 +1,17 @@
 \begin{otherlanguage}{english}
 
 
-\noindent ℣. Let us pray for our Pontiff, \textit{N.}
+\noindent \vv Let us pray for our Pontiff, \textit{N.}
 
-\noindent ℟. The Lord preserve him, and give him life, | and make him blessèd upon the earth, | and deliver him up not up to the will of his enemies.
+\noindent \rr The Lord preserve him, and give him life, | and make him blessèd upon the earth, | and deliver him up not up to the will of his enemies.
 
-\noindent ℣. Our Father…
+\noindent \vv Our Father…
 
-\noindent ℟. Give us this day…
+\noindent \rr Give us this day…
 
-\noindent ℣. Hail Mary…
+\noindent \vv Hail Mary…
 
-\noindent ℟. Holy Mary…
+\noindent \rr Holy Mary…
 
 \noindent 
 
