--- a/ad_Benedictionem/textes/Salve_Regina_en.tex
+++ b/ad_Benedictionem/textes/Salve_Regina_en.tex
@@ -8,9 +8,9 @@ And after this our exile show unto us
 the blessed fruit of thy womb, Jesus.
 O clement, O loving, O sweet Virgin Mary.
 
-\noindent ℣. Pray for us, O Holy Mother of God.
+\noindent \vv Pray for us, O Holy Mother of God.
 
-\noindent ℟. \hspace{-0.02em}That we may be made worthy of the promises of Christ.
+\noindent \rr \hspace{-0.02em}That we may be made worthy of the promises of Christ.
 
 \noindent Let us pray. O almighty, everlasting God, who by the cooperation of the Holy Spirit, didst prepare the body and soul of Mary, glorious Virgin and Mother, to become a worthy dwelling for Thy Son; grant that we who rejoice in her commemoration may, by her gracious intercession, be delivered from present evils and from everlasting death. Through the same Christ our Lord. ℟. Amen.
 \end{otherlanguage}
