--- a/ad_Benedictionem/textes/Tantum_ergo_la.tex
+++ b/ad_Benedictionem/textes/Tantum_ergo_la.tex
@@ -14,8 +14,8 @@ Compar sit laudatio. Amen.
 
 ℣. Panem de cælo præstitisti eis. \tpalleluia{}\footnote{Atque per octavam Corporis Christi. \textit{As well as throughout the octave of Corpus Christi.}}
 
-℟. Omne delectamentum in se habentem. \tpalleluia{}
+℟. Omne dele\-ctaméntum in se habéntem. \tpalleluia{}
 \par
-Oremus.
+Orémus.
 
 Deus, qui nobis sub sacramento mirabili, passionis tuæ memoriam reliquisti: tribue, quæsumus, ita nos corporis et sanguinis tui sacra mysteria venerari, ut redemptionis tuæ fructum in nobis iugiter sentiamus. Qui vivis et regnas in sæcula sæculorum. ℟. Amen. 
