--- a/ad_Benedictionem/Benediction_sundays_no_Vespers.tex
+++ b/ad_Benedictionem/Benediction_sundays_no_Vespers.tex
@@ -88,7 +88,7 @@ Amen.
 \noindent \vv Panem de cælo præstitisti eis.
 \tpalleluia{}\footnote{Atque per octavam Corporis Christi. \textit{As well as throughout the octave of Corpus Christi.}}
 
-\noindent \rr Omne delectamentum in se habentem.
+\noindent \rr Omne dele\-ctaméntum in se habéntem.
 \tpalleluia{}
 
 %\newpage
