--- a/ad_Benedictionem/textes/Ave_Regina_en.tex
+++ b/ad_Benedictionem/textes/Ave_Regina_en.tex
@@ -7,9 +7,9 @@ Lovely beyond all others,
 Farewell, o exceedingly beautiful maiden,
 And pray for us to Christ.
 
-\noindent ℣. Allow me to praise thee, O sacred Virgin.
+\noindent \vv Allow me to praise thee, O sacred Virgin.
 
-\noindent ℟. Against thy enemies give me strength.
+\noindent \rr Against thy enemies give me strength.
 
 \noindent Let us pray. Grant unto us, O merciful God, a defense against our weakness, that we who remember the holy Mother of God, by the help of her intercession, may rise from our iniquities, through Christ our Lord. ℟. Amen.
 \end{otherlanguage}
