--- a/ad_Benedictionem/textes/Oratio_PA.tex
+++ b/ad_Benedictionem/textes/Oratio_PA.tex
@@ -1,16 +1,16 @@
-\noindent ℣. Ora pro nobis, sancta Dei Génitrix.
+\noindent \vv Ora pro nobis, sancta Dei Génitrix.
 
-\noindent ℟. Ut digni efficiámur promissiónibus Christi.
+\noindent \rr Ut digni efficiámur promissiónibus Christi.
 
 %\begin{multicols}{2}
-%Oremus.
+%Orémus.
 %
 %Concéde nos fámulos tuos, quǽsumus, Dómine Deus, perpétua mentis et córporis sanitáte gaudére:~†  et, gloriósa beátæ Maríæ semper Vírginis intercessióne,~* a præsénti liberári tristítia, et ætérna pérfrui lætítia. Per Christum Dóminum nostrum.
 %
 %℟. Amen.
 %\end{multicols}
 
-Oremus.
+Orémus.
 
 \noindent  Concéde nos fámulos tuos, quǽsumus, Dómine Deus, perpétua mentis et córporis sanitáte gaudére:~†  et, gloriósa beátæ Maríæ semper Vírginis intercessióne,~* a præsénti liberári tristítia, et ætérna pérfrui lætítia. Per Christum Dóminum nostrum.
 
