--- a/ad_Benedictionem/textes/Oratio_TN_la.tex
+++ b/ad_Benedictionem/textes/Oratio_TN_la.tex
@@ -1,8 +1,8 @@
 \rubrique{A Nativitate Domini usque ad Purificationem B.M.V.:} 
 
-\noindent ℣. Post partum, Virgo, invioláta permansísti.
+\noindent \vv Post partum, Virgo, invioláta permansísti.
 
-\noindent ℟. Dei Génitrix, intercéde pro nobis.
+\noindent \rr Dei Génitrix, intercéde pro nobis.
 
 Orémus.
 
