--- a/Divinum_Officium/Hebdomada_Major/psaumes/26_8G.tex
+++ b/Divinum_Officium/Hebdomada_Major/psaumes/26_8G.tex
@@ -16,4 +16,4 @@
 \item Legem pone mihi, Dómine, in via \textbf{tu}a:~* et dírige me in sémitam rectam propter ini\textit{mícos} \textbf{me}os.
 \item Ne tradíderis me in ánimas tribulánti\textbf{um} me:~* quóniam insurrexérunt in me testes iníqui, et mentíta est iní\hspace{0.03em}\textit{quitas} \textbf{si}bi.
 \item Credo vidére bona \textbf{Dó}mini~* in ter\textit{ra} \textit{vi}\textbf{vén}tium.
-\item Exspécta Dóminum, viríliter \textbf{a}ge:~* et confortétur cor tuum, et sú\hspace{0.05em}\textit{stine} \textbf{Dó}minum.
+\item Exspécta Dóminum, viríliter \textbf{a}ge:~* et confortétur cor tuum, et sú\spurhspace\textit{stine} \textbf{Dó}minum.
